--- a/config.conf
+++ b/config.conf
@@ -3,7 +3,7 @@ icon=../media/interface/favicon.ico
 name=Exodon
 description=WorldBuilding
 creator=Exodonisus
-header=<a id='logo' href='home.html'><img src='../media/interface/logo.png' alt='logo' ></a>
+header=<a id='logo' href='home.html'><img src='logo.png' alt='logo' ></a>
 footer=<p>WorldBuilding Website of Exodonisus<u></p>
 templatefile=template.conf
 css=../style.css
